[package]
name = "rust-deep-learning"
version = "0.1.0"
authors = ["kitagawa <kitadrum50@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
mnist = "0.4.0"
image = "0.22.3"
rand = "0.7.2"
